# ChangeLog for x11-libs/libfm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.91 2013/12/14 11:49:46 hwoarang Exp $

  14 Dec 2013; Markos Chandras <hwoarang@gentoo.org> -libfm-1.1.0-r1.ebuild,
  -libfm-1.1.2.2.ebuild, -libfm-1.1.2.ebuild:
  Remove old

  10 Dec 2013; Markos Chandras <hwoarang@gentoo.org> libfm-1.1.4.ebuild,
  libfm-9999.ebuild:
  Do not block lxde-base/lxshortcut. Bug #493844

  17 Nov 2013; Markos Chandras <hwoarang@gentoo.org> libfm-9999.ebuild:
  Block lxde-base/lxshortcut to avoid file collisions

*libfm-1.1.2.2 (07 Oct 2013)

  07 Oct 2013; Markos Chandras <hwoarang@gentoo.org> +libfm-1.1.2.2.ebuild:
  Version bump

  17 Aug 2013; Markos Chandras <hwoarang@gentoo.org> -libfm-1.0.1.ebuild,
  -libfm-1.0.2.ebuild, -libfm-1.0.ebuild, -libfm-1.1.0.ebuild:
  Remove old ebuilds

*libfm-1.1.2 (17 Aug 2013)

  17 Aug 2013; Markos Chandras <hwoarang@gentoo.org> +libfm-1.1.2.ebuild:
  Version bump

*libfm-1.1.0-r1 (28 Apr 2013)

  28 Apr 2013; Markos Chandras <hwoarang@gentoo.org> +libfm-1.1.0-r1.ebuild,
  libfm-9999.ebuild:
  rebump to EAPI5 to use subslot deps

  23 Dec 2012; Markos Chandras <hwoarang@gentoo.org> libfm-9999.ebuild:
  Rework broken symlink logic once again

  02 Dec 2012; Markos Chandras <hwoarang@gentoo.org> libfm-9999.ebuild:
  Move it to EAPI5 in order to use sub-slot deps for lxde-base/menu-cache

  15 Nov 2012; Markos Chandras <hwoarang@gentoo.org> libfm-9999.ebuild:
  Fix building with IUSE=-doc. Bug #443318

  13 Nov 2012; Markos Chandras <hwoarang@gentoo.org> libfm-1.0.2.ebuild,
  libfm-1.1.0.ebuild:
  Fix building with USE=doc. Bug #442632

  13 Nov 2012; Markos Chandras <hwoarang@gentoo.org> libfm-1.0.2.ebuild,
  libfm-1.1.0.ebuild, libfm-9999.ebuild:
  Replace link if it exists

*libfm-1.1.0 (02 Nov 2012)

  02 Nov 2012; Markos Chandras <hwoarang@gentoo.org> +libfm-1.1.0.ebuild:
  Version bump. This is pretty much identical to 1.0.2
