@@ -5,26 +5,26 @@ AUX libfm-0.1.17-ssp-fix.patch 908 SHA256 f8fb5e8f6a712de882151f50a9a23d002b8719
 DIST libfm-0.1.17.tar.gz 874556 SHA256 1740681cff4cd4c5a2eaa9805d8898269cfb6a49a0bda0acb242def15bc7131b SHA512 83d62e78c68f5a212dc464774f4ac9a965f58741b9cc31bf6599c7304e0fde668edd99e33a2f9d19d2c342483d92ed36031c388c92c858c55217e47b5c8ba044 WHIRLPOOL c55471431e4130cf96412cf4943e993954139c319dd5434f1d718d9c0609a12bde3dbb8e43b889bb4cefd300e5073b59b4b8fe6eeb732d87d52d8a9d536733b4
 DIST libfm-1.1.4.tar.xz 699080 SHA256 8512c22b89d11e9c0f6044feeb72a96ac542116012c29cc8dbc287476223ee60 SHA512 66d586703a47e537a4f0b3c077facdc22df5226bc4f6462d4f01c1f95af00ccc6d39f49b08a92976b4f53cc42aef282bb16044c29049f0a415ac9f46426ec94c WHIRLPOOL ec9176418be358ba2f9706e41b8eab6496cb9ccea4c431b1f7aad0d64ff1c97249c4da5b6acacf58956cb54b22920bdc659d1ff462bfdb17ec438cdc4957b644
 EBUILD libfm-0.1.17-r1.ebuild 1744 SHA256 f95b9a221f951124a89b7e067b2534bc8cb98131e3112781e5f0de2106ca5588 SHA512 60400b6633ce414d29b6797904d1a3eacfb3d372e89cc765a822e92a2ba6f26294401d6989d0dd3a939b01572fcf5f89eedd6416ea15cfb2e8eed7cf45b99f90 WHIRLPOOL 05c0eb3b9813ccd33fa352e5904928e6f8fbd48a325832765a294a394de951bfa5fb2113cf3be7d786c743cddf8ad75b291bc9a5915d5a0de6083f7499f7b519
-EBUILD libfm-1.1.4.ebuild 3126 SHA256 73ecfb9706c1bc12cefc4a81151db01e994a5f4e4fcfffe5f80d126d6c34858d SHA512 1be531916e4dccf125aa67d89c66640d209e231d2548fa0f2208e74ff4806aa8aff6eb98ee8e6694262ec4650be5ab197b59568c3ce47724369913355dcdebe0 WHIRLPOOL 34c4f4de1eedb789c8acb7c4ff71a148b80d77803517e1c7d9f4237fb7c34a863f90e181b30f0adfb1ff341c86da28aecfbce41f0cc527976ba7dc4f7c2e4c80
-EBUILD libfm-9999.ebuild 3177 SHA256 d0cde1937eeda656e930b3f62f101f1105e140286d9d8f095eac8d8869512534 SHA512 d3defa84455cce97a626ceb32cc26abfd07717b83ed8e4ad5989cd1bd2ab3ed0afe25c8170be42f5e393a1b61f79156ccb39ceaa1f2ca3dc50ae1df0cd456532 WHIRLPOOL 107ee1e384494328beb77a79578e6e36b1d1d7c34d7c530971a69f974e3508c07b91904fcff857ba97b978f945af6726a68604d478357e18f0a18a42b3901442
-MISC ChangeLog 13136 SHA256 e3d4c34997ae863528c3d9f0e08c476e67fd68de76227f23e5f0da7280045437 SHA512 9c1bb6de8edbe819653247d66c04737b6db0096cb7265d6257947011d2e6bf413cd413522d6602cd50b67449643885dd5ae29634cae02395305cbef0ce77a618 WHIRLPOOL 629749eb0713627e95c2f14dfa54655876eccf3a3d89e8b328a6b13ddd241c52380af29cce7a792558bbe4ae8042da4951379f2b46ca6a6fcecc3c788376b033
-MISC metadata.xml 333 SHA256 2b8b8fa5d91b0d1621729114380656e8c4236289beeacccd7c2523a824277610 SHA512 6baa6bcb510be3ec56280e4a8a803e1a06212a1f1896f8466f8948e17ccadb0993c5fae14242c9706e3e1d6d849bbc8cc52be3639bbb2a8eef0d8dab4a312219 WHIRLPOOL 89355edf375d07566cbec581ab43e6287c7a1501720a5e576f797abfde06e20dd5ae0d6d485da54058ba9c6e671f312b60de21a45283aaf573e617c1cbcfec6d
+EBUILD libfm-1.1.4.ebuild 3185 SHA256 4cb038f1c5dc777354e50e255c55645a588c2e7a8094ade12bc6fef08470cd7a SHA512 332d2b7a9bebbc34f878ed5b50de52c97baeb4112a3902c3cc958ec015fcd0fa5c68e42d60910eaa2d9f95f0ff54120330e5cc8fb3b0d49bc632d332bf266f82 WHIRLPOOL da51bad7d463c6eae763e63b0026854e0bbecd9377912d25962f22e486a96eb6451ab01f51aee2463a71125d32c8b9c470b05cfcba67eb896a4fbc3080885ff9
+EBUILD libfm-9999.ebuild 3236 SHA256 366a5832a712acfce49d9840bc932b1d946efcc7f219385bee51347571cc235a SHA512 400a17765df51ae364f40eea1bf15fce86143e750a9edfc7a858065a3f55ee272d36a88f2f92e5131f2cb16a3fb2783fdb9bff95cc26a7d5f6b84feba2b2ab96 WHIRLPOOL b48e8277d0631b3105a8c22084e4546dd8969cf8a1e5f2d930abe65e53a1f79df8f2014ad716cdd15fb13e0336973fdfd405cd4160707b86119f73d3e6e10375
+MISC ChangeLog 13375 SHA256 3035427f56a142c59a8c560e341bce8676c0471e7afd73aad7c8f3a75e02e523 SHA512 94c7e08392531916eb61e7bc0f032dca7326b9b7223da3959504666930ca9ba98147a3a2eff67293276ce9653e665a9b16a24de3dc5d76f4fe16f0e6bce30cd0 WHIRLPOOL b09b1c930e3de89e7c443e76430ce1c268bea00358d6eb307190f9b4e1cba5e9c59028bead9cbda8066fe1226fc7203bc99b2e138dc99aa29994dba2fd338133
+MISC metadata.xml 451 SHA256 4163eaac44a5ad190c6ed73f6cd9bfe578c569312f2035503d2caa161d1c6bac SHA512 505ba1338a117f98fdf4fdb45eefe90d5c4fc40592c78cc5cc3ba0e51eca08d315da976164ac93e3d1af4fb29d2d1a9b5f6fee342bab093afd6d982519ee8311 WHIRLPOOL ab06538d63a9b22df60a26451f8f2279d630eb006098179f16f30eee4315bc1225491245761af4d22f3a4a659cf7dc596294a4d8e9ea39ff9967efecb1e9d115
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJSrEXMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJSwUxjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88N84P/iHSK6eBw5QeBPcZuuwqDLP9
-DeZcTP5FrnqLNnYcTLo5XUsseBDCFRUk6M5rIuzcUabhi+23pEBWj+I5lRhM1Mvg
-rt5xt/rs4R1Q5TwGSl9MT6JSIYOtMB6B5qU/PxTVqVnBA0YPPPlneUiRBc3B6Was
-GLbF7SHvdke9t/LubBK6M5zeeHX+pHpT05YGE1tli6HI8SceTGquEJKw3Klh7BVd
-rMTSOzDJq5zEEv/LZRXrzeSFrHRyTUGygpyk/wa9GmSt6UcGYcbN7qiP87KJUIPr
-LfFVp2GrlvtoIWRAEMuHqdIShGkGFLo7d35+6DR9sUwIlWnzD1AfsZeVgyuHkfue
-FSzypiUFV/36wkd4ei0NdUZcDBnP9Mhuk63u71Aevy3wT5VBfthkiWRparHBLjvt
-nnsZWtzCj7b3yklLtZnbZWb7sHPQ4z0jLAuF7kxe72hWmQ5KOtA6na/UroNn6fur
-w63iPmDuKh0SLknYVczDROE15eUGj4yqr+ul6SXFLQKt36zrZ2esYIoe69QXsjjo
-54roFLtVVIm9tLear/ofSIdb0nSY+s8aDO5vSQ7IMJk9pt2srqvm9vXWYqwDQVB2
-xqCDm5d2ntXBVSKUzlvTqxvrRoLvwE4u8DIvyFLz3LpBi8FedVLHiiJOCjlVqXwl
-fjp+OJzn+mS4eMNfb53v
-=fmvM
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88+ZkQAIVWXPu+Bv7t/imEMMb8b/9F
+bjopXh7Mw1hsJ+4CgqdSlP1neCFYn/zQNyzcq0Tl3IMb2Tbxs471Gb95SxJ0Sq12
+uQfTXD6Y/eUfpnYdCaLcAou7nQHhyro4gGBIC0SZ1d1QQBMIDqA/KVm5p4cKgFii
+g97veDxedi/gZ53fDI3JLoako3/QTrsqxZ/f1DFN1YtHuHO32CHRYajqkaYbqjOC
+wPnEY+4ERUy0X8td4Syv5DecPgfNOY3jF1bQXSP2QZT2DW7Pp1YDRegI7HUlN2oH
+4o1ZfSY8OIMCRO0EwYriTNkhMatT5vpOSVf3NSSAMLoioR/sW4MbVDgZYB26j+In
+qXmrrJi/HDv2J7hi+mFCsgPeIs/Qm88eshwh3XF74pPZQ+N4FJjhBZKzHBJ/VhS6
+EnVjsa6JiNoNF9vCpM7EMzdCo+W9eyAFZUXFQUhneUIIn0Qv7raPsfIvo3wkYcx6
+ecKLLG/91YUaV7Ph52eOmf8XbG3uuveWsHY6nNc5zK8ovN3T6f7k+6wLrNqkoqgp
+icbAdeky8Duw3dS8PMLMkP0bSWeLCQwN59/gZdN1E2BA0TKjvJEsNX5yisWa5444
+bW5Gypnwxocj+B529K2xFiyWfFEIOG92kfyCx3tieutzlkuTzXp6yjJMXycp6jgG
+42xlE7q6RgUj1bUnPIT0
+=lwCm
 -----END PGP SIGNATURE-----
