@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/libfm-1.1.4.ebuild,v 1.2 2013/12/10 19:08:00 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/libfm-1.1.4.ebuild,v 1.3 2013/12/30 10:35:40 hwoarang Exp $
 
 EAPI=5
 
@@ -15,14 +15,15 @@ SRC_URI="http://dev.gentoo.org/~hwoarang/distfiles/${MY_P}.tar.xz"
 KEYWORDS="~alpha ~amd64 ~arm ~ppc ~x86 ~amd64-linux ~x86-linux"
 LICENSE="GPL-2"
 SLOT="0/4.7.1" #copy ABI_VERSION because it seems upstream change it randomly
-IUSE="debug doc examples vala"
+IUSE="debug doc examples udisks vala"
 
 COMMON_DEPEND=">=dev-libs/glib-2.18:2
 	>=x11-libs/gtk+-2.16:2
 	>=lxde-base/menu-cache-0.3.2:="
 RDEPEND="${COMMON_DEPEND}
 	x11-misc/shared-mime-info
-	|| ( gnome-base/gvfs[udev,udisks] gnome-base/gvfs[udev,gdu] )"
+	udisks? ( || ( gnome-base/gvfs[udev,udisks] gnome-base/gvfs[udev,gdu] ) )
+	!udisks? ( gnome-base/gvfs[udev] )"
 DEPEND="${COMMON_DEPEND}
 	vala? ( $(vala_depend) )
 	doc? (
@@ -73,9 +74,9 @@ src_configure() {
 		--sysconfdir="${EPREFIX}/etc" \
 		--disable-dependency-tracking \
 		--disable-static \
-		--disable-udisks \
 		$(use_enable examples demo) \
 		$(use_enable debug) \
+		$(use_enable udisks) \
 		$(use_enable vala actions) \
 		$(use_enable doc gtk-doc) \
 		--with-html-dir=/usr/share/doc/${PF}/html
