@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libfm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.91 2013/12/14 11:49:46 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libfm/ChangeLog,v 1.92 2013/12/30 10:35:40 hwoarang Exp $
+
+  30 Dec 2013; Markos Chandras <hwoarang@gentoo.org> libfm-1.1.4.ebuild,
+  libfm-9999.ebuild, metadata.xml:
+  Add udisks use-flag per bug #438700 for systems without *kit packages. Patch
+  by Dominique Michel <dominique.michel@vtxnet.ch>
 
   14 Dec 2013; Markos Chandras <hwoarang@gentoo.org> -libfm-1.1.0-r1.ebuild,
   -libfm-1.1.2.2.ebuild, -libfm-1.1.2.ebuild:
